# npm-resource

./: .gitignore  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json  workspace.json
.husky/: pre-commit
apps/npm-resource/: Cargo.toml  Dockerfile  LICENSE-MIT
apps/npm-resource-e2e/assets/: package-2.tgz  smallest-package.tgz
apps/npm-resource-e2e/assets/package/: ignore
apps/npm-resource-e2e/assets/smallest_package/: package.json  temp-package.tgz
apps/npm-resource-e2e/step-definitions/: before.ts  commands.step.ts  fs.step.ts  registry.step.ts  sources.step.ts
apps/npm-resource/src/: lib.rs
apps/npm-resource/src/npm/: mod.rs  npm.rs  package_json.rs  package_name.rs  package_tar.rs  publish.rs  registry_client.rs
apps/npm-resource/src/resource/: concourse.rs  mod.rs  resource.rs
apps/npm-resource/src/utils/: basic_token.rs  integrity.rs  mod.rs  tar.rs
apps/npm-resource/tests/: check.rs  common.rs  in.rs  out.rs
apps/npm-resource/tests/data/: base_payload.json  lodash_payload.json  put_payload_light.json  put_payload_with_params.json  v7_latest_payload.json  v7_latest_public_payload.json
apps/npm-resource/tests/data/npm/: acme-core-manifest.json
apps/npm-resource/tests/data/package/: package.tgz
apps/npm-resource/tests/data/package/source/: README.md  file-to-ignore  package.json
examples/pipeline/: check-examples.yaml  simple-pipeline-next-latest.yaml
tools/executors/cucumber/: impl.js  impl.ts
tools/executors/mockserver/: impl.js  impl.ts  schema.json
tools/executors/run-when/: impl.js  impl.ts
(+7 files in other folders)
